--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,7 @@ body, html {
 
 .ml-15{margin-left: 15px !important}
 
+.mt-20{margin-top: 20px !important}
 .mt-50{margin-top: 50px !important}
 .mt-150{margin-top: 150px !important}
 .mb-30{margin-bottom: 30px !important}
@@ -246,6 +247,8 @@ body, html {
     padding-right: 10px;
     position: relative;
     text-decoration: none;
+    font-weight: 900;
+    /* text-shadow: 0px 0px 0.1px #f5f5f5; */
 }
 #navbar li a:hover {color: #088770 !important;}
 #navbar li a.active {color: #f93a3a;}
@@ -499,7 +502,7 @@ body, html {
     
   }
   .bgimg-3 {
-    background-image: url("../images/background/disclaimer1.png");
+    background-image: url("../images/background/disclaimer1.jpg");
     min-height: 100%;
     /* background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),  url('../images/background/header_concept.jpg'); */
     
@@ -767,7 +770,7 @@ body, html {
 }
 .img-shinmichi{
     width: 100%;
-    max-width: 350px;
+    max-width: 200px;
 }
 .img-kbj{
     width: 100%;
@@ -824,7 +827,7 @@ body, html {
         -webkit-border-radius: 35px;
         -moz-border-radius: 35px;
         border-radius: 35px;
-        display: none;
+        /* display: none; */
         -webkit-transition: all 0.3s linear;
         -moz-transition: all 0.3s ease;
         -ms-transition: all 0.3s ease;
@@ -854,9 +857,31 @@ body, html {
     }
 
 .f-whatsapp{
-    width: 20px;
+    background-image: url(../images/icon/wa-green.png);
+    width: 42px;
+    height: 42px;
+    background-size: 20px;
+    background-position: center;
+    background-repeat: no-repeat;
     position: absolute;
-    margin-top: 3px;
+    margin: 9px 0 0 10px;
+    border: 2px solid #088770;
+    border-radius: 100px;
+    padding: 5px;
+}
+.f-whatsapp:hover{
+    background-image: url(../images/icon/wa-white.png);
+    width: 42px;
+    height: 42px;
+    background-size: 20px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+    margin: 9px 0 0 10px;
+    border: 2px solid #088770;
+    background-color: #088770;
+    border-radius: 100px;
+    padding: 5px;
 }
 .fp-whatsapp{
     color: #0e8c06 !important;
@@ -865,4 +890,20 @@ body, html {
 }
 .fp-whatsapp:hover{
     color: #f93a3a !important;
+}
+.floating-whatsapp{
+    width: 175px;
+    height: 60px;
+    position: fixed;
+    display: block;
+    background-color: #fff;
+    bottom: 25px;
+    right: 0;
+    border-top-left-radius: 100px;
+    border-bottom-left-radius: 100px;
+}
+.floating-teks{
+    position: absolute;
+    margin: 17px 0 0 60px;
+    color: #088770;
 }
