--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -178,7 +178,7 @@
           right: 0 !important;
       }
       .f-whatsapp {
-        margin-top: 1.8px;
+        /* margin-top: 1.8px; */
     }
       }
     
@@ -262,7 +262,7 @@
         right: 0 !important;
     }
     .f-whatsapp {
-      margin-top: 1.8px;
+      /* margin-top: 1.8px; */
   }
     }
     
@@ -372,7 +372,7 @@
         right: 0 !important;
     }
     .f-whatsapp {
-      margin-top: 1.8px;
+      /* margin-top: 1.8px; */
   }
     }
 
@@ -478,7 +478,7 @@
         right: 0 !important;
     }
     .f-whatsapp {
-      margin-top: 1.8px;
+      /* margin-top: 1.8px; */
   }
     }
   
