--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -492,18 +492,24 @@ body, html {
   .bgimg-1 {
     background-image: url("../images/background/header_concept.jpg");
     min-height: 100%;
+    max-height: 100%;
+    height: 100%;
     /* background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),  url('../images/background/header_concept.jpg'); */
     
   }
   .bgimg-2 {
     background-image: url("../images/background/gate.jpg");
     min-height: 100%;
+    max-height: 100%;
+    height: 100%;
     /* background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),  url('../images/background/header_concept.jpg'); */
     
   }
   .bgimg-3 {
     background-image: url("../images/background/disclaimer1.jpg");
     min-height: 100%;
+    max-height: 100%;
+    height: 100%;
     /* background-image: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.1)),  url('../images/background/header_concept.jpg'); */
     
   }
